--- a/index.css
+++ b/index.css
@@ -52,8 +52,8 @@ img{
     outline: 0;
     background: #ebfffc;
     border-radius: 50%;
-    width: 40px;
-    height: 50px;
+    width: 65px;
+    height: 45px;
     cursor: pointer;
 }
 
@@ -114,4 +114,8 @@ img{
     font-size: 14px;
     margin-top: 10px;
     display: none;
+}
+#searchbtn{
+    height: 60px;
+    width: 50px;
 }
